--- a/app/src/main/res/layout/activity_data_setter.xml
+++ b/app/src/main/res/layout/activity_data_setter.xml
@@ -8,39 +8,38 @@
     android:orientation="vertical"
     tools:context=".activity.SpendingOrEarningDataSetterActivity">
 
-    <co.ceryle.segmentedbutton.SegmentedButtonGroup
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:id="@+id/segmentedButtonGroup"
-        app:sbg_animateSelector="linearOutSlowIn"
-        app:sbg_animateSelectorDuration="500"
-        app:sbg_backgroundColor="#FFF"
-        app:sbg_position="0"
-        app:sbg_radius="2dp"
-        app:sbg_ripple="true"
-        app:sbg_rippleColor="@color/green"
-        app:sbg_selectorColor="@color/light_green"
-        app:sbg_selectorTextColor="#FFF"
-        app:sbg_shadow="true"
-        app:sbg_shadowElevation="1dp"
-        app:sbg_shadowMargin="1dp">
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:padding="15dp"
             android:minHeight="10dp"
+            android:id="@+id/spendingButton"
+            android:textColor="#FFF"
+            android:shadowColor="@color/black"
+            android:textSize="18sp"
             android:text="Spending"
+            android:backgroundTint="@color/green"
             android:textAllCaps="false" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:minHeight="10dp"
+            android:textSize="18sp"
+            android:layout_margin="1dp"
+            android:shadowColor="@color/black"
+            android:backgroundTint="@color/white"
+            android:id="@+id/earningButton"
+            android:padding="15dp"
             android:text="Earning"
             android:textAllCaps="false" />
-
-    </co.ceryle.segmentedbutton.SegmentedButtonGroup>
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
