--- a/app/src/main/res/layout/activity_categorised_data_viewer.xml
+++ b/app/src/main/res/layout/activity_categorised_data_viewer.xml
@@ -1,106 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activity.CategorisedDataViewerActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <data>
+
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/titleBar"
-        android:background="@color/green">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".activity.CategorisedDataViewerActivity">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:gravity="center"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
-            android:layout_height="match_parent">
-            <TextView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:gravity="center"
-                android:id="@+id/backText"
-                android:background="@drawable/ic_back"/>
-        </RelativeLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Personal"
-            android:id="@+id/titleTextView"
-            android:textColor="#FFF"
-            android:textSize="23sp"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"/>
-
-    </RelativeLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:id="@+id/scrollView"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
+            android:layout_height="50dp"
+            android:id="@+id/titleBar"
+            android:background="@color/green">
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:orientation="vertical">
+                android:layout_width="wrap_content"
+                android:gravity="center"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="10dp"
+                android:layout_height="match_parent">
 
-                <RelativeLayout
-                    android:layout_width="120dp"
-                    android:layout_margin="5dp"
-                    android:id="@+id/circleBack"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/circle"
-                    android:layout_height="120dp">
-                    <TextView
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:id="@+id/circleIcon"
-                        android:background="@drawable/ic_accomodation"/>
-                </RelativeLayout>
-
+                <TextView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:gravity="center"
+                    android:id="@+id/backText"
+                    android:background="@drawable/ic_back" />
             </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Personal"
+                android:id="@+id/titleTextView"
+                android:textColor="#FFF"
+                android:textSize="23sp"
+                android:layout_centerHorizontal="true"
+                android:gravity="center" />
+
+        </RelativeLayout>
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:id="@+id/scrollView"
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Records"
-                    android:textColor="@color/black"
-                    android:id="@+id/recordBarText"
-                    android:textSize="18sp"
-                    android:background="#E8F5E9"
-                    android:padding="10dp"/>
 
-                <androidx.recyclerview.widget.RecyclerView
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="120dp"
+                        android:layout_margin="5dp"
+                        android:id="@+id/circleBack"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/circle"
+                        android:layout_height="120dp">
+
+                        <TextView
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:id="@+id/circleIcon"
+                            android:background="@drawable/ic_accomodation" />
+                    </RelativeLayout>
+
+                </RelativeLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:id="@+id/recyclerView"/>
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Records"
+                        android:textColor="@color/black"
+                        android:id="@+id/recordBarText"
+                        android:textSize="18sp"
+                        android:background="#E8F5E9"
+                        android:padding="10dp" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:id="@+id/recyclerView" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
-</LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </LinearLayout>
+</layout>
