--- a/app/src/main/res/layout/activity_data_setter.xml
+++ b/app/src/main/res/layout/activity_data_setter.xml
@@ -1,51 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    android:orientation="vertical"
-    tools:context=".activity.SpendingOrEarningDataSetterActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
 
+    </data>
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:orientation="vertical"
+            tools:context=".activity.SpendingOrEarningDataSetterActivity">
 
-        <Button
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:minHeight="10dp"
-            android:id="@+id/spendingButton"
-            android:textColor="#FFF"
-            android:shadowColor="@color/black"
-            android:textSize="18sp"
-            android:text="Spending"
-            android:backgroundTint="@color/green"
-            android:textAllCaps="false" />
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
 
-        <Button
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:minHeight="10dp"
-            android:textSize="18sp"
-            android:layout_margin="1dp"
-            android:shadowColor="@color/black"
-            android:backgroundTint="@color/white"
-            android:id="@+id/earningButton"
-            android:padding="15dp"
-            android:text="Earning"
-            android:textAllCaps="false" />
+            <Button
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:minHeight="10dp"
+                    android:id="@+id/spendingButton"
+                    android:textColor="#FFF"
+                    android:shadowColor="@color/black"
+                    android:textSize="18sp"
+                    android:text="Spending"
+                    android:backgroundTint="@color/green"
+                    android:textAllCaps="false"/>
+
+            <Button
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="10dp"
+                    android:textSize="18sp"
+                    android:layout_margin="1dp"
+                    android:shadowColor="@color/black"
+                    android:backgroundTint="@color/white"
+                    android:id="@+id/earningButton"
+                    android:padding="15dp"
+                    android:text="Earning"
+                    android:textAllCaps="false"/>
+        </LinearLayout>
+
+        <FrameLayout
+                android:layout_width="match_parent"
+                android:id="@+id/frameLayout"
+                android:layout_height="match_parent">
+
+        </FrameLayout>
+
     </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:id="@+id/frameLayout"
-        android:layout_height="match_parent">
-
-    </FrameLayout>
-
-</LinearLayout>
+</layout>
